<resources>
    <string name="app_name">Wondama Tourism</string>
    <string name="home">Home</string>
    <string name="transport">Transportasi</string>
    <string name="hotel">Hotel</string>
    <string name="hotel_homestay">Hotel &amp; Homestay</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="add_to_favorite">Tambah ke Favorite</string>
    <string name="r">R</string>
    <string name="hello_regina">Halo, Regina</string>
    <string name="notification">Notifikasi</string>
    <string name="lets_come_to_wondama">Ayo temukan Homestay yang nyaman di tempat wisata di Wondama.</string>
    <string name="festival">Festival</string>
    <string name="tour_nature">Wisata Alam</string>
    <string name="tour_culture">Wisata Budaya</string>
    <string name="tour_packet">Paket Wisata</string>
    <string name="tour_religious">Wisata Religi</string>
    <string name="tour_history">Wisata Sejarah</string>
    <string name="detail">Detail</string>
    <string name="booking">Pesan</string>
    <string name="review_value">%1$s Review</string>
    <string name="picture_more">+%1$s Foto</string>
    <string name="activity">Aktivitas</string>
    <string name="wishlist">Daftar Keinginan</string>
    <string name="price">Harga</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="about">Tentang</string>
    <string name="from">Dari</string>
    <string name="to">Sampai</string>
    <string name="range_date_value">%1$s - %2$s</string>
    <string name="bullet_text">• %1$s\n\t\t\t\t%2$s</string>
    <string name="ship">Kapal Laut</string>
    <string name="plane">Pesawat</string>
    <string name="goals">Tujuan</string>
    <string name="departure_time">Keberangkatan</string>
    <string name="time_arrives">Tiba</string>
    <string name="travel_time">Waktu Tempuh</string>
    <string name="list_value">: %1$s</string>
    <string name="address">Alamat</string>
    <string name="facilities">Fasilitas</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Lupa Password?</u></string>
    <string name="not_yet_account">Belum punya Akun?</string>
    <string name="register">Daftar</string>
    <string name="have_account">Sudah punya Akun?</string>
    <string name="tips_password"><![CDATA[Gunakan 8 karakter dengan campuran angka, huruf & simbol.]]></string>
    <string name="number_telephone">Nomor Telepon</string>
    <string name="create_account">Buat Akun baru</string>
    <string name="name">Nama Lengkap</string>
    <string name="available_bedroom">Kamar tersedia</string>
    <string name="forget_pass">Lupa Kata Sandi</string>
    <string name="forgot_desc">Masukkan emailAnda, kami akan mengirimkan kode verifikasi untuk mengatur ulang kata sandi Anda.</string>
    <string name="code_request">Kode Permintaan</string>
    <string name="setting">Pengaturan</string>
    <string name="my_profile">Profil Saya</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="help">Bantuan</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="change_profile">Ubah Profile</string>
    <string name="phone_id">+62 %1$s</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="active_password">Password Aktif</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="save">Simpan</string>
    <string name="whatsApp_value">+62 323232322</string>
    <string name="email_value">elfanulilalbab@gmail.com</string>
    <string name="phone_value">+62 82234042323</string>
    <string name="number_whatsapp">Nomor WhatsApp</string>
    <string name="about_application">Wondama Tourism adalah aplikasi untuk melakukan traveling di Wondama. Dengan aplikasi ini, anda dapat melakukan rencana perjalanan dengan mudah, sehingga anda tidak perlu repot-repot mencari biro perjalanan</string>
    <string name="logout">Keluar</string>
    <string name="input_verification_code">Masukkan Kode Verifikasi</string>
    <string name="input_code_from_email">Masukkan kode yang telah kami kirimkan ke email anda</string>
    <string name="verification">Verifikasi</string>
    <string name="resend_code">Kirim ulang kode</string>
    <string name="favorite">Favorite</string>
    <string name="create_new_password">Buat Kata Sandi baru</string>
    <string name="create">Buat</string>
    <string name="background">Background</string>
    <string name="next">Next</string>
    <string name="start">Mulai</string>
    <string name="bedroom">Kamar</string>
    <string name="symbol_dots">•</string>
    <string name="detail_price">Detail Harga</string>
    <string name="pajak_admin"><![CDATA[Pajak & Admin]]></string>
    <string name="total">Total</string>
    <string name="ppn">Termasuk Pajak</string>
    <string name="booking_bedroom">Pesan</string>
    <string name="contact_detail">Detail Kontak</string>
    <string name="input_full_name">Masukkan Nama Lengkap</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_number_phone">Masukkan Nomor Telepon</string>
    <string name="ksp">Kawasan Strategi Provinsi</string>
    <string name="tour_bahari">Wisata Bahari</string>
</resources>