<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/shape_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="24dp"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:drawableStart="@drawable/outline_person"
            android:drawableTint="@color/color_selector_til"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:drawableStart="@drawable/outline_phone"
            android:drawableTint="@color/color_selector_til"
            android:drawablePadding="8dp"
            android:hint="@string/number_telephone"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:drawableStart="@drawable/outline_email"
            android:drawableTint="@color/color_selector_til"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/outline_lock"
            android:drawableTint="@color/color_selector_til"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tips_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tips_password"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.Material3.LabelSmall"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="@+id/til_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingHorizontal="48dp"
        android:paddingVertical="14dp"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/white"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips_password"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_not_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="96dp"
        android:text="@string/have_account"
        app:layout_constraintEnd_toStartOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="96dp"
        android:text="@string/login"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/til_password"
        app:layout_constraintStart_toEndOf="@+id/tv_not_have"
        app:layout_constraintBottom_toBottomOf="@+id/tv_not_have"/>
</androidx.constraintlayout.widget.ConstraintLayout>