<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_my_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_person"
        android:drawableTint="@android:color/tab_indicator_text"
        android:drawablePadding="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/my_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_setting_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_favorite"
        android:drawableTint="@android:color/tab_indicator_text"
        android:drawablePadding="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/favorite"
        app:layout_constraintTop_toBottomOf="@+id/divider_setting_1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_setting_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_location_on"
        android:drawableTint="@android:color/tab_indicator_text"
        android:drawablePadding="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/wishlist"
        app:layout_constraintTop_toBottomOf="@+id/divider_setting_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_setting_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_wishlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_lock"
        android:drawableTint="@android:color/tab_indicator_text"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@+id/divider_setting_3"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_phone"
        android:drawableTint="@android:color/tab_indicator_text"
        android:drawablePadding="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/contact_us"
        app:layout_constraintTop_toBottomOf="@+id/tv_about"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:drawableStart="@drawable/outline_info"
        android:drawableTint="@android:color/tab_indicator_text"
        android:drawablePadding="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:gravity="center_vertical"
        android:text="@string/about_app"
        app:layout_constraintTop_toBottomOf="@+id/divider_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/logout"
        android:layout_marginHorizontal="16dp"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/white"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>